--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Movies</string>
+    <string name="title_film_name">Film Name</string>
+    <string name="title_film_year">Film Year</string>
+    <string name="film_poster">Film Poster</string>
+    <string name="clear_checked">Clear checked</string>
 </resources>
